src/objects/GDMFSL_Agreement_Level__c/GDMFSL_Agreement_Level__c.object-meta.xml
<CustomObject>
    <label>Agreement Level</label>
    <nameField>
        <label>Agreement Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>