src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_24hr_Reactive_Coverage__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_24hr_Reactive_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Break fix covered (not-chargeable) 24/7</description>
    <label>24hr Reactive Coverage - 7 days/week</label>
    <type>Checkbox</type>
</CustomField>