src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_24HrCoverage_BusinessDays__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_24HrCoverage_BusinessDays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>24 hour Reactive coverage business days</label>
    <type>Checkbox</type>
</CustomField>