src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_After_Hr_Reactive_Coverage__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_After_Hr_Reactive_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Break fix covered (not-chargeable) after hours Business Hours</description>
    <label>After Hours Reactive Coverage</label>
    <type>Checkbox</type>
</CustomField>