src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_Connected_Digital_Services__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Connected_Digital_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contracts with digital services, ACI Connectivity (Forge, Cyber, HRM, Remote, etc…)</description>
    <label>Digital Services - Connected Tech Sup</label>
    <type>Checkbox</type>
</CustomField>