src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_DigitalServices_CS__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_DigitalServices_CS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Services - Cybersecurity Sup</label>
    <type>Checkbox</type>
</CustomField>