src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_HolidayNoReactiveCoverage__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_HolidayNoReactiveCoverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holidays No Reactive Coverage</label>
    <type>Checkbox</type>
</CustomField>