src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_Office_Hr_Reactive_Coverage__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Office_Hr_Reactive_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Break fix covered (not-chargeable) during Business Hours</description>
    <label>Business Hours Reactive Coverage</label>
    <type>Checkbox</type>
</CustomField>