src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_Parts_Replacement_Management__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Parts_Replacement_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Parts Replacement and Management included on ALE</description>
    <label>Parts Replacement</label>
    <type>Checkbox</type>
</CustomField>