src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_PO_Number_Reactive_Coverage__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_PO_Number_Reactive_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contract/Asset reactive coverage rerquires a PO or Job Number from the customer</description>
    <label>PO Number Required for Reactive Coverage</label>
    <type>Checkbox</type>
</CustomField>