src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_Preventative_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Preventative_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Preventative Maintenance work is covered on ALE</description>
    <label>Preventative Maintenance</label>
    <type>Checkbox</type>
</CustomField>