src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_Reactive_Work_Chargeable__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Reactive_Work_Chargeable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Break Fix covered at a charge</description>
    <label>Reactive Work Is Chargeable</label>
    <type>Checkbox</type>
</CustomField>