src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_ReactiveWork_Chargeable_L__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_ReactiveWork_Chargeable_L__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reactive work is Chargeable - Limited</label>
    <type>Checkbox</type>
</CustomField>