src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_RemoteReactiveWork_Chargeable_L__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_RemoteReactiveWork_Chargeable_L__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Reactive work Chargeable Limited</label>
    <type>Checkbox</type>
</CustomField>