src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_Site_Resident_Labour_Present__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Site_Resident_Labour_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contract with man on site, first responders</description>
    <label>Site Resident Labour Present</label>
    <type>Checkbox</type>
</CustomField>