src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_SLA_Guarantee_Financial_Penalty__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_SLA_Guarantee_Financial_Penalty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Service Level Agreements linked to financial penalties due to non performance/miss</description>
    <label>SLA Guarantee with Financial Penalty</label>
    <type>Checkbox</type>
</CustomField>