src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_Software_Assurance__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Software_Assurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contracts with software assurance services - EBI upgrades</description>
    <label>Digital Services - Application SW Sup</label>
    <type>Checkbox</type>
</CustomField>