src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_Tech_Phone_Support__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Tech_Phone_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tech Support Services</description>
    <label>Remote Support - Phone</label>
    <type>Checkbox</type>
</CustomField>