src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_Third_Party_Support__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Third_Party_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contracts with equipment maintained by third parties</description>
    <label>Third Party Support</label>
    <type>Checkbox</type>
</CustomField>