src/objects/GDMFSL_Agreement_Level__c/fields/GDMFSL_Warranty_Services__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Warranty_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asset is under Warranty</description>
    <label>Warranty Services</label>
    <type>Checkbox</type>
</CustomField>